--- a/FinancialControl/Views/Terms/Index.cshtml
+++ b/FinancialControl/Views/Terms/Index.cshtml
@@ -1,7 +1,4 @@
-﻿@{
-	Layout = null;
-}
-
+﻿
 <p>This Privacy Policy governs the manner in which http://quickfinancialcontrol.com collects, uses, maintains and discloses information collected from users (each, a "User") of the http://quickfinancialcontrol.com website ("Site").</p>
 
 <h3>Personal identification information</h3>
@@ -39,6 +36,6 @@
 <p>By using this Site, you signify your acceptance of this policy. If you do not agree to this policy, please do not use our Site. Your continued use of the Site following the posting of changes to this policy will be deemed your acceptance of those changes. This privacy policy was built <a href="https://privacypolicies.com/" target="_blank">using the generator at www.PrivacyPolicies.com</a>.</p>
 
 <h3>Contacting us</h3>
-<p>If you have any questions about this Privacy Policy, the practices of this site, or your dealings with this site, please contact us.</p>
+<p>If you have any questions about this Privacy Policy, the practices of this site, or your dealings with this site, please contact us by sending an e-mail to admin@quickfinancialcontrol.com.</p>
 
-<p>This document was last updated on March 31, 2018</p>
+<p>This document was last updated on May 29, 2022</p>
