Filtering by account if for entry UI

--- a/FinancialControl/Views/Entries/Index.cshtml
+++ b/FinancialControl/Views/Entries/Index.cshtml
@@ -5,9 +5,9 @@
 }
 
 <style>
-	.scrolltab {
-		overflow-x: scroll;
-	}
+    .scrolltab {
+        overflow-x: scroll;
+    }
 </style>
 
 <h2>@FinancialControl.App_GlobalResources.st.Entries</h2>
@@ -68,19 +68,18 @@
 
     var grid = new WebGrid(source: Model, defaultSort: "Name", rowsPerPage: 10);
 
-
     var myHtml = grid.GetHtml(
-                                htmlAttributes:new
+                                htmlAttributes: new
                                 {
-                                    id="grid"
+                                    id = "grid"
                                 },
                                 tableStyle: "table table-striped table-responsive scrolltab",
                                 headerStyle: "head",
                                 alternatingRowStyle: "alt",
                                 columns: grid.Columns(
                                     grid.Column("dateMovement", header: FinancialControl.App_GlobalResources.st.Date, format: (item) => String.Format("{0:dd-MM-yy}", item.dateMovement)),
-                                    grid.Column("Category.type",  header: FinancialControl.App_GlobalResources.st.Type,style:"visibility:hidden"),
-                                    grid.Column("value", header: FinancialControl.App_GlobalResources.st.Value, format: (item) => String.Format("{0:C}", item.value)),
+                                    grid.Column("Category.type", header: FinancialControl.App_GlobalResources.st.Type, style: "visibility:hidden"),
+                                    grid.Column("value", header: FinancialControl.App_GlobalResources.st.Value, format: (item) => String.Format("{0:C}", item.value), style: "value"),
                                     grid.Column("Category.categoryName", header: FinancialControl.App_GlobalResources.st.Category),
                                     grid.Column("description", header: FinancialControl.App_GlobalResources.st.DescriptionField),
                                     grid.Column("Account.account_description", header: FinancialControl.App_GlobalResources.st.Account),
@@ -88,25 +87,27 @@
                                     grid.Column(format: (item) => @Html.ActionLink(FinancialControl.App_GlobalResources.st.Edit, "Edit", new { id = item.id }))
         ));
 
-	<div class="table-responsive">@myHtml</div>
-	<script type="text/javascript">
-		$(document).ready(
+    <div class="table-responsive">@myHtml</div>
 
-			function () {
-				$('#grid td:nth-child(2),th:nth-child(2)').hide();
+    <script type="text/javascript">
+        $(document).ready(
 
-				$("#grid > tbody > tr").each(
-					function () {
-						
-						if ($(this).children("td:nth-child(2)").text() == "C") {
-							$(this).children("td:nth-child(3)").css("color", "#33CC99");
-						}
-						else {
-							$(this).children("td:nth-child(3)").css("color", "red");	
-						}
-					}
-				);
-			}
-		);
-	</script>	
+            function () {
+                $('#grid td:nth-child(2),th:nth-child(2)').hide();
+
+                $("#grid > tbody > tr").each(
+                    function () {
+
+                        if ($(this).children("td:nth-child(2)").text() == "C") {
+                            $(this).children("td:nth-child(3)").css("color", "#33CC99");
+                        }
+                        else if ($(this).children("td:nth-child(2)").text() == "D") {
+                            $(this).children("td:nth-child(3)").css("color", "red");
+                        }
+                    }
+                );
+            }
+        );
+    </script>
+
 }
